graduate out of a proof of concept
This patch brings the necessary missing functionality for production
use of the SQL runner, namely:

- Full serialization support of AST nodes, including augment stanzas.
  This introduces a breaking change, preventing functions from being
  used as augment sources. Instead, the `'identity` symbol is now a valid
  source to produce the full output at a specific path in the augment
  destination. THIS IS A BREAKING CHANGE.
- Relevant indices have been added to the `workflow_run` and `task`
  tables.
- Tests run on both the manifold runner and SQL runner.
- New fields have been added to both `workflow_run` and to `task` to
  serve common request patterns more efficiently.

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -9,5 +9,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Shutdown Ubuntu MySQL (SUDO)
+      run: sudo service mysql stop
+    - uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql root password: 'root'
+        mysql database: 'ablauf'
+        mysql user: 'ablauf'
+        mysql password: 'ablauf'
     - name: Lint and test
       run: lein with-profile test do cljfmt check, difftest
