feat: short lived transactions (#32)
- Ensure that processing leafs occurs outside a transaction, so workers don't hold the connection for too long :tada:
- Allow marking all pending tasks as failed
  - This will also allow resubmission
- Add more tests to ensure retry works as expected
- Move sql tests to its own namespace

Retries can be resubmitted on eg: app start:
```
(let [workflow-ids (ablauf/fail-pending-tasks! db store)] 
  (doseq [workflow-id workflow-ids]
    (when 
      (ablauf/submit-retry db store workflow-id)
       (log/info "Workflow retried submitted successfully")))
```

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -19,3 +19,5 @@ jobs:
         mysql password: 'ablauf'
     - name: Lint and test
       run: lein with-profile test do cljfmt check, difftest
+      env:
+        MARIA_JDBC_URI: "jdbc:mysql://root:root@127.0.0.1:3306/ablauf?serverTimezone=UTC"
